minor improvements; dark mode v1

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,8 @@
 @source '../../storage/framework/views/*.php';
 @source "../../node_modules/flowbite";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-sans:
     Figtree, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
